spices/ecs/tests/errors/defsystem-undeclared-write.tur
;; I3 negative regression: a defsystem body that calls use-cap! on a
;; component NOT in its :writes list cannot resolve the missing
;; <Comp>-write-cap binding, so the body fails to elaborate with an
;; unbound-symbol error.  This is the substitute for the (currently
;; aspirational, I4-bound) "writes to component not in :writes is a
;; compile-time error" promise from the spec.
;;
;; Pre-I4 surface: the user *can* manually call (use-cap! Vel-write-cap)
;; -- and the lack of Vel in :writes means Vel-write-cap is not in
;; scope, so elaboration fails.

(defmodule defsystem_undeclared_write_test
  (export)

(import ecs/system :refer [System make-system system-run! defsystem])
(import ecs/cap    :refer [WriteCap ReadCap make-write-cap make-read-cap use-cap!])

(defstruct Pos [x : int])
(defstruct Vel [x : int])

(def Pos-cid 0)
(def Vel-cid 1)

(defsystem rogue
  []                         ;; :reads
  [Pos]                      ;; :writes -- Vel is NOT declared
  (use-cap! Vel-write-cap))  ;; ERROR: Vel-write-cap not in scope

) ;; end defmodule defsystem_undeclared_write_test
